--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ body {
 
 .section.team {
   background-color: var(--text-footer-section-color);
+  padding-bottom: 120px;
 }
 .section-title {
   color: var(--title-color);
@@ -227,4 +228,12 @@ body {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+}
+
+.list.btn {
+  padding-top: 96px;
+  margin-bottom: 72px;
+}
+.section.portfolio {
+  padding-bottom: 120px;
 }
