--- a/css/style.css
+++ b/css/style.css
@@ -191,15 +191,22 @@ body {
 }
 .footer {
   background-color: var(--footer-beckgrond-color);
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .footer-text {
   color: var(--text-footer-section-color);
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
+  width: 264px;
 }
 .logo-cloud {
   color: var(--text-footer-section-color);
+}
+.logo.link {
+  display: inline-block;
+  margin-bottom: 17.5px;
 }
 /* Стилі Portfolio */
 .section .work-button {
