--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ body {
 .hero {
   background-color: var(--footer-beckgrond-color);
   text-align: center;
-  margin-bottom: 120px;
+
   padding-top: 188px;
   padding-bottom: 188px;
 }
@@ -123,6 +123,7 @@ body {
 .section.team {
   background-color: var(--text-footer-section-color);
   padding-bottom: 120px;
+  padding-top: 120px;
 }
 .section-title {
   color: var(--title-color);
@@ -150,16 +151,15 @@ body {
   margin-bottom: 8px;
 }
 .section.qua {
-  /* padding-top: 120px;
-  padding-bottom: 120px; */
-  margin-bottom: 120px;
-}
-.section.doing {
-  margin-bottom: 120px;
-}
-.section-title.transform {
   padding-top: 120px;
 }
+.section.doing {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+/* .section-title.transform {
+  padding-top: 120px;
+} */
 .section-text {
   color: var(--text-color);
   font-weight: 400;
