--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ body {
 /* Page header */
 .page-header {
   background-color: var(--main-background-color);
+  border-bottom: 1px solid var(--hairlines-button-color);
 }
 
 /* Menu navigation */
@@ -308,9 +309,38 @@ footer .logo.link {
 }
 
 .list.btn {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+
   padding-top: 96px;
   margin-bottom: 72px;
 }
 .section.portfolio {
   padding-bottom: 120px;
+}
+
+.list.examples {
+  display: flex;
+  flex-wrap: wrap;
+}
+.work-container {
+  padding-top: 32px;
+
+  padding-bottom: 32px;
+  padding-left: 16px;
+  border: 1px solid var(--hairlines-button-color);
+  border-top: none;
+}
+.item-work {
+  width: 360px;
+  margin-right: 24px;
+  margin-bottom: 48px;
+  width: calc((100% - 48px) / 3);
+}
+.item-work:nth-child(3n) {
+  margin-right: 0;
+}
+.item-work:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
