ДЗ 3 випраляю помилку portfolio.html

--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,7 @@ footer .logo.link {
   padding-top: 96px;
   margin-bottom: 72px;
 }
-.section.portfolio {
+.section.portfol {
   padding-bottom: 120px;
 }
 
